# rag

./: .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt  run_project.md  tests.py  tips_for_beginners.md
.github/: dependabot.yml
.github/workflows/: lint-backend.yml  test-backend.yml
app/: models.py
app/api/: main.py
app/api/routes/: chat.py  health.py
app/tests/api/routes/: test_LearnRequest.py  test_chat.py  test_health.py
data/: RAG_chunk_evaluation_questions.txt  chapterXX.txt
documents/: chunk_size.md
nlp_basics_articles/: 01_Neural-Networks-Basics.md  02_Natural-Language-Processing-Basics.md  03_Natural-Language-Processing-Models.md  Paper_P_Lewis_2021.md
plan_and_progress/: 2024_11.md
scripts/: add_chunk.py  ask_query.py  evaluate_chunk_size.py
scripts/evaluate_chunk_size_results/: response_1732849305_half_a_paragraph.txt  response_1732849305_paragraph.txt  response_1732849305_quarter_a_paragraph.txt  response_1732849305_sentence.txt
