[tool.poetry]
name = "rag"
version = "0.1.0"
description = "RAG Demo"
authors = ["Kazuki Kijima <kazukiyoshida96@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chromadb = "0.5.11"
openai = "1.51.0"
fastapi = {extras = ["standard"], version = "0.115.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"

[tool.pytest.ini_options]
python_files = [
    "tests.py",
    "test_*.py",
    "*_test.py",
]
filterwarnings = [
    "ignore:Type google._upb._message:DeprecationWarning"  # chromadb
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
