[tool.poetry]
name = "rag"
version = "0.1.0"
description = "RAG Demo"
authors = ["Kazuki Kijima <kazukiyoshida96@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chromadb = "0.6.2"
openai = "1.61.1"
fastapi = {extras = ["standard"], version = "0.115.6"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"

[tool.pytest.ini_options]
python_files = [
    "tests.py",
    "test_*.py",
    "*_test.py",
]
filterwarnings = [
    "ignore:Type google._upb._message:DeprecationWarning"  # chromadb
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
